# Phishing-detector

./: .gitignore  LICENSE  pyproject.toml
dashboard/: app.py
src/: config.py  main.py
src/analyzers/: email_analyzer.py  image_analyzer.py  nlp_analyzers.py  url_analyzer.py
src/data/: database.py
src/engine/: scoring.py
src/models/: enums.py  requests.py  responses.py
src/phishing_detector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: email_parsers.py
